--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            background-color: black; /* Set background color to black to avoid white/grey screen */
         }
         .overlay {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-family: 'Montserrat', sans-serif;
             font-size: 30vw; /* 50% of viewport width */
             color: white;
@@ -33,11 +38,10 @@
     </style>
 </head>
 <body>
-    <video id="videoPlayer" autoplay loop onclick="changeVideo()"></video>
-    <div class="overlay">ALIKI</div>
+    <video id="videoPlayer" autoplay loop></video>
+    <div class="overlay" onclick="changeVideo()">ALIKI</div>
     <audio id="bgMusic" loop>
         <source src="videos/Aftersun.mp3" type="audio/mpeg">
-        <!-- Add more <source> elements if you have alternative audio formats -->
     </audio>
 
     <script>
@@ -104,13 +108,11 @@
     "videos/video60.mp4"
 ];
 
-
         let currentVideoIndex = 0;
         const videoPlayer = document.getElementById('videoPlayer');
         const bgMusic = document.getElementById('bgMusic');
 
         function changeVideo() {
-             // Start playing background music
             currentVideoIndex = (currentVideoIndex + 1) % videos.length;
             videoPlayer.src = videos[currentVideoIndex];
             videoPlayer.play();
@@ -118,19 +120,18 @@
             bgMusic.play();
         }
 
-        function shuffleArray(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
+        function startMusic() {
+            if (bgMusic.paused) {
+                bgMusic.play(); // Start playing background music
             }
-            return array;
         }
-
-        shuffleArray(videos);
 
         // Set initial video
         videoPlayer.src = videos[currentVideoIndex];
         videoPlayer.volume = 0.3;
+
+        // Add event listener for music on body click
+        document.body.addEventListener('click', startMusic);
     </script>
 </body>
 </html>
