--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             color: white;
             text-align: center;
             user-select: none; 
+            z-index: 1;
         }
     </style>
 </head>
