--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <video id="videoPlayer" autoplay loop playsinline></video>
+    <video id="videoPlayer" autoplay loop muted playsinline></video>
     <div class="overlay" onclick="changeVideo()">ALIKI</div>
     <audio id="bgMusic" loop>
         <source src="videos/Aftersun.mp3" type="audio/mpeg">
