--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             currentVideoIndex = (currentVideoIndex + 1) % videos.length;
             videoPlayer.src = videos[currentVideoIndex];
             videoPlayer.play();
+            const nextVideoIndex = (currentVideoIndex + 1) % videos.length;
+            const nextVideo = new Video();
+            nextVideo.src = videos[nextVideoIndex];
             if (!bgMusic.paused) return; // If music is already playing, do nothing
             bgMusic.play();
         }
