--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
             overflow: hidden;
             position: relative;
         }
-        video {
+        .video-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .video {
             width: 100%;
             height: 100%;
             object-fit: cover;
             background-color: black; /* Set background color to black to avoid white/grey screen */
+            display: none;
+        }
+        .visible {
+            display: block;
         }
         .overlay {
             position: absolute;
@@ -39,7 +53,10 @@
     </style>
 </head>
 <body>
-    <video id="videoPlayer" autoplay loop muted playsinline></video>
+    <div class="video-container">
+        <video id="videoPlayer1" class="video visible" loop playsinline muted></video>
+        <video id="videoPlayer2" class="video" loop playsinline muted></video>
+    </div>
     <div class="overlay" onclick="changeVideo()">ALIKI</div>
     <audio id="bgMusic" loop>
         <source src="videos/Aftersun.mp3" type="audio/mpeg">
@@ -110,7 +127,8 @@
 ];
 
         let currentVideoIndex = 0;
-        const videoPlayer = document.getElementById('videoPlayer');
+        const videoPlayer1 = document.getElementById('videoPlayer1');
+        const videoPlayer2 = document.getElementById('videoPlayer2');
         const bgMusic = document.getElementById('bgMusic');
 
         function shuffleArray(array) {
@@ -123,10 +141,24 @@
 
         function changeVideo() {
             currentVideoIndex = (currentVideoIndex + 1) % videos.length;
-            videoPlayer.src = videos[currentVideoIndex];
-            videoPlayer.play();
-            if (!bgMusic.paused) return; // If music is already playing, do nothing
-            bgMusic.play();
+
+            if (videoPlayer1.paused) {
+                videoPlayer2.classList.remove('visible');
+                videoPlayer1.classList.add('visible');
+                videoPlayer1.play();
+                preloadNextVideo(videoPlayer2); // Start playing background music
+            } else {
+                videoPlayer1.classList.remove('visible');
+                videoPlayer2.classList.add('visible');
+                videoPlayer2.play();
+                preloadNextVideo(videoPlayer1);
+            }
+            
+
+            // Start background music if not already playing
+            if (bgMusic.paused) {
+                bgMusic.play();
+            }
         }
 
         function startMusic() {
@@ -135,10 +167,17 @@
             }
         }
 
+        function preloadNextVideo(videoElement) {
+            const nextIndex = (currentVideoIndex + 1) % videos.length;
+            videoElement.src = videos[nextIndex];
+            videoElement.load();
+        }
+
         shuffleArray(videos);
-        // Set initial video
-        videoPlayer.src = videos[currentVideoIndex];
-        videoPlayer.volume = 0.3;
+        // Set initial videos
+        videoPlayer1.src = videos[currentVideoIndex];
+        videoPlayer2.src = videos[(currentVideoIndex + 1) % videos.length];
+        //videoPlayer1.classList.add('visible');
 
         // Add event listener for music on body click
         document.body.addEventListener('click', startMusic);
