--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Video Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: 'Antique Olive';
+            src: url('videos/antique.ttf') format('truetype');
+        }
         body, html {
             margin: 0;
             padding: 0;
@@ -43,8 +47,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 30vw; /* 50% of viewport width */
+            font-family: 'Antique Olive';
+            font-size: 64px;
             color: white;
             text-align: center;
             user-select: none; 
