--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Antique Olive';
-            font-size: 64px;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 30vw;
             color: white;
             text-align: center;
             user-select: none; 
