--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
-            font-family: 'Antique Olive';
-            src: url('videos/antique.ttf') format('truetype');
-        }
+    font-family: 'Antique Olive';
+    src: url('videos/antique.woff2') format('woff2'), /* Modern Browsers */
+         url('videos/antique.woff') format('woff'),   /* Most Browsers */
+         url('videos/antique.ttf') format('truetype'); /* Legacy Browsers */
+}
         body, html {
             margin: 0;
             padding: 0;
