--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 30vw;
+            font-family: 'Antique Olive';
+            font-size: 64px;
             color: white;
             text-align: center;
             user-select: none; 
