--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          url('videos/antique.ttf') format('truetype'); /* Legacy Browsers */
 }
         body, html {
+            background-color: black;
             margin: 0;
             padding: 0;
             width: 100%;
@@ -60,7 +61,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video id="videoPlayer1" class="video visible" loop playsinline muted></video>
+        <video id="videoPlayer1" class="video" loop playsinline muted></video>
         <video id="videoPlayer2" class="video" loop playsinline muted></video>
     </div>
     <div class="overlay" onclick="changeVideo()">ALIKI</div>
