--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Antique Olive';
+            font-family: 'Antique Olive', Montserrat, sans-serif;;
             font-size: 64px;
             color: white;
             text-align: center;
