--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         @font-face {
     font-family: 'Antique Olive';
     src: url('videos/antique.woff2') format('woff2'), /* Modern Browsers */
-         url('videos/antique.woff') format('woff'),   /* Most Browsers */
+         url('videos/antique.woff') format('woff'),
+        url('videos/antique.svg') format('svg'),/* Most Browsers */
          url('videos/antique.ttf') format('truetype'); /* Legacy Browsers */
 }
         body, html {
