--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
          url('videos/antique.woff') format('woff'),
         url('videos/antique.svg') format('svg'),/* Most Browsers */
          url('videos/antique.ttf') format('truetype'); /* Legacy Browsers */
+            font-weight:normal;
+    font-style:normal;
 }
         body, html {
             background-color: black;
