--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <style>
         @font-face {
     font-family: 'Antique Olive';
-    src: url('videos/antique.woff2') format('woff2'), /* Modern Browsers */
-         url('videos/antique.woff') format('woff'),
-        url('videos/antique.svg') format('svg'),/* Most Browsers */
-         url('videos/antique.ttf') format('truetype'); /* Legacy Browsers */
+    src: url('../krekelmans.github.io
+/videos/antique.woff2') format('woff2'), /* Modern Browsers */
+         url('../krekelmans.github.io
+/videos/antique.woff') format('woff'),
+        url('../krekelmans.github.io
+/videos/antique.svg') format('svg'),/* Most Browsers */
+         url('../krekelmans.github.io
+/videos/antique.ttf') format('truetype'); /* Legacy Browsers */
             font-weight:normal;
     font-style:normal;
 }
