--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Antique Olive', Montserrat, sans-serif;;
+            font-family: 'Antique Olive', Montserrat, sans-serif;
             font-size: 64px;
             color: white;
             text-align: center;
