--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         @font-face {
     font-family: 'Antique Olive';
     src: url('../../videos/antique.woff2') format('woff2'), /* Modern Browsers */
-         url('../../videos/antique.woff') format('woff'),
-         url('../../videos/antique.ttf') format('truetype'); /* Legacy Browsers */
+         url('../../videos/antique.woff') format('woff');/* Legacy Browsers */
             font-weight:normal;
     font-style:normal;
 }
