--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <style>
         @font-face {
     font-family: 'Antique Olive';
-    src: url('../../videos/antique.woff2') format('woff2'), /* Modern Browsers */
-         url('../../videos/antique.woff') format('woff');/* Legacy Browsers */
+    src: url('../../videos/antique.woff2') format('woff2');/* Legacy Browsers */
             font-weight:normal;
     font-style:normal;
 }
