--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <style>
         @font-face {
     font-family: 'Antique Olive';
-    src: url('../../videos/antique.woff2') format('woff2');/* Legacy Browsers */
+    src: url('../../videos/antique.woff2') format('woff2'),/* Legacy Browsers */
+         url('../../videos/antique.woff') format('woff'),
+         url('../../videos/antique.ttf') format('truetype');
             font-weight:normal;
     font-style:normal;
 }
