--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
-    font-family: 'Antique Olive';
-    src: url('../../videos/antique.woff2') format('woff2'),/* Legacy Browsers */
-         url('../../videos/antique.woff') format('woff'),
-         url('../../videos/antique.ttf') format('truetype');
-            font-weight:normal;
-    font-style:normal;
+  font-family: "Antique Olive";
+  font-weight: normal;
+  font-style: normal;
+  src: url("'../../videos/antique.woff") format("woff");
 }
+        
         body, html {
             background-color: black;
             margin: 0;
@@ -51,7 +50,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Antique Olive', Montserrat, sans-serif;
+            font-family: "Antique Olive", Montserrat, sans-serif;
             font-size: 64px;
             color: white;
             text-align: center;
