--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <style>
         @font-face {
-  font-family: "Antique Olive";
-  font-weight: normal;
-  font-style: normal;
-  src: url("'../../videos/antique.woff") format("woff");
+    font-family: 'Antique Olive';
+    src: url('../../videos/antique.woff2') format('woff2'),/* Legacy Browsers */
+         url('../../videos/antique.woff') format('woff'),
+         url('../../videos/antique.ttf') format('truetype');
+            font-weight:normal;
+    font-style:normal;
 }
         
         body, html {
