--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <video id="videoPlayer1" class="video" loop playsinline muted></video>
         <video id="videoPlayer2" class="video" loop playsinline muted></video>
     </div>
-    <div class="overlay" onclick="changeVideo()">ALIKI</div>
+    <div class="overlay" onclick="changeVideo()">
+        <img src="videos/ALIKI.svg" alt="ALIKI Logo">
+    </div>
     <audio id="bgMusic" loop>
         <source src="videos/Aftersun.mp3" type="audio/mpeg">
     </audio>
