--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             user-select: none; 
             z-index: 1;
         }
+        .overlay img{cursor: pointer;}
         .song-title {
             position: fixed;
             bottom: 20px; /* Adjust as needed */
@@ -64,6 +65,7 @@
             font-family: 'Montserrat', sans-serif;
             font-size: 1.5rem; /* Adjust as needed */
             z-index: 2;
+            cursor: pointer;
         }
         .song-title.visible {
             display: block;
