--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             padding: 10px 20px;
             border-radius: 10px;
             font-family: 'Montserrat', sans-serif;
+            text-align: center;
             font-size: 1.5rem; /* Adjust as needed */
             z-index: 2;
             cursor: pointer;
@@ -190,9 +191,9 @@ const songTitles = [
             }
 
             if (bgMusic.paused) {
-                
                 updateSongTitle();
                 bgMusic.play();
+                logoElement.setAttribute('src', 'videos/ALIKI.svg');
             }
         }
 
