--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <video id="videoPlayer2" class="video" loop playsinline muted></video>
     </div>
     <div class="overlay" onclick="changeVideo()">
-        <img src="videos/introaliki.svg" alt="ALIKI Logo">
+        <img id="logo" src="videos/introaliki.svg" alt="ALIKI Logo">
     </div>
     <audio id="bgMusic" loop>
         <source src="videos/Aftersun.mp3" type="audio/mpeg">
